<resources>
    <string name="app_name">201\nCreated</string>
    <string name="toolbar_back_text">뒤로가기</string>
    <string name="in_app_update_dialog_title">업데이트 안내</string>
    <string name="in_app_update_dialog_content">새 버전이 있습니다. 원활한 앱 사용을 위해 최신 버전 업데이트를 권장합니다.\n업데이트 하시겠습니까?</string>
    <string name="in_app_update_dialog_btn_ok_text">업데이트 하기</string>
    <string name="in_app_update_dialog_btn_cancel_text">나중에 하기</string>
    <string name="login_guest"><u>비회원으로 둘러보기</u></string>
    <string name="login_github_guide">깃허브로 시작하기</string>
    <string name="login_fail_message">로그인에 실패하였습니다.</string>
    <string name="login_onBoarding_fail_message">내 소개 불러오기에 실패했습니다</string>
    <string name="onBoarding_title_text">나에 대해 소개해주세요!</string>
    <string name="onBoarding_sub_title_text">작성된 간단 소개는 스터디 지원 시 공개됩니다</string>
    <string name="onBoarding_nickname_title_text">닉네임</string>
    <string name="onBoarding_nickname_sub_title_text">2 ~ 8자(공백 불가) 한글, 영문, 숫자, 언더바(_) 사용 가능</string>
    <string name="onBoarding_nickname_hint_text">닉네임 입력</string>
    <string name="onBoarding_introduction_title_text">간단 소개</string>
    <string name="onBoarding_introduction_sub_title_text">200자 이내</string>
    <string name="onBoarding_introduction_hint_text">간단 소개 입력</string>
    <string name="onBoarding_btn_text">작성완료</string>
    <string name="onBoarding_unAvailable_nickname">닉네임은 2~8자 한글, 영문, 숫자, 언더바로 구성되어야합니다</string>
    <string name="onBoarding_available_nickname">사용가능한 닉네임입니다</string>
    <string name="onBoarding_duplicate_nickname">중복된 닉네임입니다</string>
    <string name="onBoarding_toast_fail">소개 저장에 실패했습니다</string>
    <string name="main_ic_home">내 스터디</string>
    <string name="main_ic_study_list">스터디목록</string>
    <string name="main_ic_study_manage">스터디관리</string>
    <string name="main_ic_chat">쪽지</string>
    <string name="main_ic_my_page">마이페이지</string>
    <string name="main_toast_back_pressed">한 번 더 누르면 앱이 종료됩니다</string>
    <string name="guest_information_title">로그인이 필요한 서비스입니다.</string>
    <string name="guest_toast_can_not_report">비회원은 신고할 수 없습니다</string>
    <string name="guest_login_button">로그인하러 가기 ></string>
    <string name="loginBottomSheetFragment_information_title">로그인 이후 서비스 이용이 가능합니다.</string>
    <string name="home_study_list_must_do">Must Do</string>
    <string name="hom_study_list_must_do_default_message">Must Do를 아직 등록하지 않았어요!</string>
    <string name="home_study_list_guide">Must Do를 인증하면 잔디조각을 드려요! \n스터디를 완주할 시 내 티어 잔디가 심어져요!</string>
    <string name="home_no_study">참여중인 스터디가 없어요!</string>
    <string name="home_study_list_date">D - %d</string>
    <string name="home_study_list_grass_count">%d개</string>
    <string name="home_essential_todo">필수투두</string>
    <string name="home_optional_todo">선택투두</string>
    <string name="home_progress_rate">스터디원 필수투두 진행률 %d%%</string>
    <string name="home_welcome_phrase">%s님\n오늘 잔디는 심으셨나요?</string>
    <string name="home_dash_board_enter_button">Must Do 인증하기</string>
    <string name="home_dash_board_must_do">Must Do.</string>
    <string name="home_dash_board_d_day">D - %d</string>
    <string name="home_dash_board_next_study">다음 스터디까지</string>
    <string name="error_baseFragment">"[ERROR]Binding no initialization"</string>
    <string name="study_list_chip_recruiting">모집중</string>
    <string name="study_list_chip_processing">진행중</string>
    <string name="study_list_chip_all">전체</string>
    <string name="study_list_chip_waiting">수락 대기중</string>
    <string name="study_list_chip_accept">시작 대기중</string>
    <string name="study_list_create">스터디 만들기</string>
    <string name="study_list_item_sort_description">정렬</string>
    <string name="study_list_search_button_menu">검색</string>
    <string name="study_list_title">스터디 목록</string>
    <string name="study_list_information_format">개설일 %s</string>
    <string name="study_list_member_format">%d/%d</string>
    <string name="study_list_previous_date">예상시작일</string>
    <string name="study_list_processing_date">시작일</string>
    <string name="study_list_item_date_format">일</string>
    <string name="study_list_item_week_format">주</string>
    <string name="study_list_not_found">찾으시는 스터디가 없어요</string>
    <string name="study_list_sort">정렬</string>
    <string name="study_list_average_tier_description">평균티어</string>
    <string name="study_manage_title">스터디 관리</string>
    <string name="study_manage_joined_tab">참여한 스터디</string>
    <string name="study_manage_opened_tab">개설한 스터디</string>
    <string name="study_manage_joined_tab_no_study">참여한 스터디가 없습니다 !</string>
    <string name="study_manage_opened_tab_no_study">개설한 스터디가 없습니다 !</string>
    <string name="icon_text_button_name_people_count">인원 수</string>
    <string name="icon_text_button_name_period">기간</string>
    <string name="icon_text_button_name_cycle">주</string>
    <string name="icon_text_button_formatter_information_people_count">%d명</string>
    <string name="icon_text_button_formatter_information_cycle">%d주</string>
    <string name="icon_text_button_formatter_information_period">%d회</string>
    <string name="study_detail_app_bar_title">스터디 상세보기</string>
    <string name="study_detail_app_bar_study_master_title">개설한 스터디 관리하기</string>
    <string name="study_detail_study_people">스터디원</string>
    <string name="study_detail_study_capacity">참여하기(%d/%d)</string>
    <string name="study_detail_button_start_study">요일 선택하기(%d/%d)</string>
    <string name="study_detail_button_preparing_service">아직 준비중인 기능입니다</string>
    <string name="study_detail_dm_button_content_description">스터디장에게 문의하기</string>
    <string name="study_detail_study_accept_waiting">수락을 기다리고 있어요</string>
    <string name="study_detail_study_start_waiting">시작을 기다리고 있어요</string>
    <string name="study_detail_do_not_accept_member_anymore">더이상 스터디 멤버를 받을 수 없습니다.</string>
    <string name="study_detail_notify_invalid_study">스터디를 찾을 수 없습니다.</string>
    <string name="study_detail_notify_cant_participant">더는 참가할 수 없어요</string>
    <string name="study_detail_not_yet">아직 준비중입니다</string>
    <string name="study_detail_toast_study_start_failed">스터디 시작이 실패했습니다</string>
    <string name="item_study_detail_deleted_user_description">탈퇴한 유저에요</string>
    <string name="item_study_detail_study_success_rate">스터디 성공률 %d%%</string>
    <string name="start_study_bottom_sheet_dialog_fragment_title">스터디 요일</string>
    <string name="start_study_bottom_sheet_dialog_fragment_button_start">시작하기</string>
    <string name="study_start_bottom_sheet_dialog_fragment_not_valid_study">유효하지 않은 스터디입니다.</string>
    <string name="study_management_app_bar_title_is_study_participant">참여한 스터디 관리하기</string>
    <string name="study_management_app_bar_title_is_study_master">개설한 스터디 관리하기</string>
    <string name="study_management_essential_todo">필수투두</string>
    <string name="study_management_optional_todo">선택투두</string>
    <string name="study_management_study_member">스터디원</string>
    <string name="study_management_edit_todo"> 수정하기</string>
    <string name="study_management_edit_todo_done">수정완료</string>
    <string name="study_management_add_todo"> 추가하기</string>
    <string name="study_management_round">%d회차</string>
    <string name="study_management_round_postfix">회차</string>
    <string name="study_management_end_button_is_study_participant">그만두기</string>
    <string name="study_management_end_button_is_study_master">종료하기</string>
    <string name="study_management_previous_button_description">이전 스터디 회차</string>
    <string name="study_management_next_button_description">다음 스터디 회차</string>
    <string name="study_management_information_button_menu">스터디 정보</string>
    <string name="study_management_not_allowed_add_optional_todo">더이상 선택투두를 추가할 수 없습니다.</string>
    <string name="study_management_not_allowed_empty_content">투두를 입력해 주세요.</string>
    <string name="study_management_not_allowed_another_edit">현재 투두 작성을 완료한 후 다시 시도해 주세요.</string>
    <string name="study_management_period_of_round">%d %s</string>
    <string name="study_management_deleted_member_alert">탈퇴한 회원입니다.</string>
    <string name="item_study_management_todo_description">투두 체크박스</string>
    <string name="item_study_management_todo_done">필수투두를 완료했어요!</string>
    <string name="item_study_management_todo_undone">필수투두를 하고있어요!</string>
    <string name="item_study_management_study_master_image_description">스터디장</string>
    <string name="item_study_management_optional_todo_button">투두 체크박스</string>
    <string name="item_study_management_add_todo_button_text">추가</string>
    <string name="item_study_management_add_todo_hint">투두를 추가해주세요</string>
    <string name="item_study_management_empty_todo">아직 투두가 없어요!</string>
    <string name="item_study_management_require_todo">필수 투두를 추가해 주세요!</string>
    <string name="custom_profile_image_content_description">프로필 이미지</string>
    <string name="create_study_toolbar_title">스터디 만들기</string>
    <string name="create_study_button_next">다음</string>
    <string name="create_study_button_done">작성완료</string>
    <string name="create_study_toast_create_study_success">스터디 개설에 성공했습니다</string>
    <string name="create_study_toast_create_study_fail">스터디 개설에 실패했습니다</string>
    <string name="create_study_tag_people_count">TAG_CREATE_STUDY_PEOPLE_COUNT</string>
    <string name="create_study_tag_study_date">TAG_CREATE_STUDY_STUDY_DATE</string>
    <string name="create_study_tag_cycle">TAG_CREATE_STUDY_CYCLE</string>
    <string name="first_create_study_people_count_title">스터디는 몇 명과 함께하시나요?</string>
    <string name="first_create_study_people_count_information">모집인원을 알려주세요!\n최소 2명, 최대 8명까지 함께할 수 있습니다.</string>
    <string name="first_create_study_people_count_hint">6 명</string>
    <string name="first_create_study_study_date_title">스터디는 몇 주간 진행하시나요?</string>
    <string name="first_create_study_study_date_information">스터디가 진행되는 기간을 대략적으로 알려주세요!\n기간이 지나도 스터디가 종료되지는 않습니다.</string>
    <string name="first_create_study_study_date_hint">약 8주간 진행</string>
    <string name="first_create_study_cycle_title">한 주에 몇 회 진행되나요?</string>
    <string name="first_create_study_cycle_information">진행될 스터디가 한 주에 몇 회 진행되는지 알려주세요!\n정확한 요일은 스터디가 시작될 때 입력할 수 있습니다.</string>
    <string name="first_create_study_cycle_hint">1 회</string>
    <string name="first_create_study_formatter_information_people_count">%d 명</string>
    <string name="first_create_study_formatter_information_study_date">약 %d주간 진행</string>
    <string name="first_create_study_formatter_information_cycle">%d 회</string>
    <string name="second_create_study_study_name_title">스터디 이름은 무엇인가요?</string>
    <string name="second_create_study_study_name_information">스터디 이름을 알려주세요.\n다른 사용자들이 알기 쉽게 작성하는 것이 좋아요!</string>
    <string name="second_create_study_study_name_hint">예시) 자바 프로그래밍 스터디 구해요</string>
    <string name="second_create_study_study_introduction_title">무엇을 하는 스터디인가요?</string>
    <string name="second_create_study_study_introduction_information">스터디를 소개 해주세요.\n다른 사용자들이 알기 쉽게 작성하는 것이 좋아요!</string>
    <string name="second_create_study_study_introduction_hint">예시) 야, 너두 할 수 있어 자바\' 책을 착실히 읽어나갈 분들을 찾고 있습니다</string>
    <string name="bottom_sheet_fragment_people_count_title_text">인원 수</string>
    <string name="bottom_sheet_fragment_study_date_title_text">예상 스터디 기간</string>
    <string name="bottom_sheet_fragment_startDate_title_text">예상 시작일</string>
    <string name="bottom_sheet_fragment_cycle_title_text">스터디 진행 횟수</string>
    <string name="bottom_sheet_fragment_period_title_text">스터디 기간</string>
    <string name="bottom_sheet_fragment_button_name_cancel">취소</string>
    <string name="bottom_sheet_fragment_button_name_save">저장</string>
    <string name="single_picker_text_people_count">명</string>
    <string name="single_picker_text_study_date">주</string>
    <string name="single_picker_text_cycle">회</string>
    <string name="calendar_formatter_information_date">yyyy.MM.dd</string>
    <string name="multiPicker_display_name_day">일</string>
    <string name="multiPicker_display_name_week">주</string>
</resources>