<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_first_create_study_people_count_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/first_create_study_people_count_title"
            android:textAppearance="@style/title_sb22"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_first_create_study_people_count_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_create_study_people_count_information"
            android:textAppearance="@style/subtitle_r16"
            android:textColor="@color/grey02_78808B"
            app:layout_constraintEnd_toEndOf="@id/tv_first_create_study_people_count_title"
            app:layout_constraintStart_toStartOf="@id/tv_first_create_study_people_count_title"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_people_count_title" />

        <TextView
            android:id="@+id/tv_first_create_study_people_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_radius_5dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/first_create_study_people_count_hint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:textAppearance="@style/text_r16"
            android:textColor="@color/white"
            android:textColorHint="@color/grey02_78808B"
            app:drawableEndCompat="@drawable/ic_people_capacity"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tv_first_create_study_people_count_information"
            app:layout_constraintStart_toStartOf="@id/tv_first_create_study_people_count_information"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_people_count_information" />

        <TextView
            android:id="@+id/tv_first_create_study_study_date_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/first_create_study_study_date_title"
            android:textAppearance="@style/title_sb22"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_people_count" />

        <TextView
            android:id="@+id/tv_first_create_study_study_date_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_create_study_study_date_information"
            android:textAppearance="@style/subtitle_r16"
            android:textColor="@color/grey02_78808B"
            app:layout_constraintEnd_toEndOf="@id/tv_first_create_study_study_date_title"
            app:layout_constraintStart_toStartOf="@id/tv_first_create_study_study_date_title"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_study_date_title" />

        <TextView
            android:id="@+id/tv_first_create_study_study_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_radius_5dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/first_create_study_study_date_hint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:textAppearance="@style/text_r16"
            android:textColor="@color/white"
            android:textColorHint="@color/grey02_78808B"
            app:drawableEndCompat="@drawable/ic_period"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tv_first_create_study_study_date_information"
            app:layout_constraintStart_toStartOf="@id/tv_first_create_study_study_date_information"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_study_date_information" />

        <TextView
            android:id="@+id/tv_first_create_study_cycle_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/first_create_study_cycle_title"
            android:textAppearance="@style/title_sb22"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_study_date" />

        <TextView
            android:id="@+id/tv_first_create_study_cycle_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_create_study_cycle_information"
            android:textAppearance="@style/subtitle_r16"
            android:textColor="@color/grey02_78808B"
            app:layout_constraintEnd_toEndOf="@id/tv_first_create_study_cycle_title"
            app:layout_constraintStart_toStartOf="@id/tv_first_create_study_cycle_title"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_cycle_title" />

        <TextView
            android:id="@+id/tv_first_create_study_cycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_radius_5dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/first_create_study_cycle_hint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:textAppearance="@style/text_r16"
            android:textColor="@color/white"
            android:textColorHint="@color/grey02_78808B"
            app:drawableEndCompat="@drawable/ic_period"
            app:drawableTint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_first_create_study_btn_next"
            app:layout_constraintEnd_toEndOf="@id/tv_first_create_study_cycle_information"
            app:layout_constraintStart_toStartOf="@id/tv_first_create_study_cycle_information"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_cycle_information"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/tv_first_create_study_btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="28dp"
            android:background="@drawable/bg_btn_color_and_radius_10dp_disabled"
            android:paddingVertical="14dp"
            android:text="@string/create_study_button_next"
            android:textAlignment="center"
            android:textAppearance="@style/button_sb20"
            android:textColor="@color/tv_color_disabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_create_study_cycle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
